// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component snapshot 1`] = `
<header
  className="course-header"
>
  <a
    className="sr-only sr-only-focusable"
    href="#main-content"
  >
    Skip to main content.
  </a>
  <div
    className="container-xl py-2 d-flex align-items-center"
  >
    <LinkedLogo />
    <CourseLabel
      courseNumber="course-number"
      courseOrg="course-org"
      courseTitle="course-title"
    />
    <AnonymousUserMenu />
  </div>
</header>
`;

exports[`Header component snapshot with authenticatedUser 1`] = `
<header
  className="course-header"
>
  <a
    className="sr-only sr-only-focusable"
    href="#main-content"
  >
    Skip to main content.
  </a>
  <div
    className="container-xl py-2 d-flex align-items-center"
  >
    <LinkedLogo />
    <CourseLabel
      courseNumber="course-number"
      courseOrg="course-org"
      courseTitle="course-title"
    />
    <AuthenticatedUserDropdown
      username="test"
    />
  </div>
</header>
`;
